--- a/SAF.Web.Intranet/Areas/Publicacion/Views/Evaluador/Bandeja.cshtml
+++ b/SAF.Web.Intranet/Areas/Publicacion/Views/Evaluador/Bandeja.cshtml
@@ -85,7 +85,7 @@
                             "sClass": "center",
                             "sWidth": "5%",
                             "render": function (data, type, row) {
-                                return '<center><button class="btn" title="Publicar" type="button" onclick="verCortePublicacion(' + row[0] + ');"><i class="fa fa-users"></i></button></center>';
+                                return '<center><button class="btn" title="Ver Auditores" type="button" onclick="verCortePublicacion(' + row[0] + ');"><i class="fa fa-users"></i></button></center>';
                             }
                         },
                         {
