--- a/SAF.Web.Intranet/Views/Propuesta/Index.cshtml
+++ b/SAF.Web.Intranet/Views/Propuesta/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model SAF.Web.Intranet.Models.PropuestaModel
+﻿@using SAF.Configuracion.Enum;
+@model SAF.Web.Intranet.Models.PropuestaModel
 @{
     ViewBag.PageTitle = "Propuesta";
     ViewBag.PageDescription = "Propuestas";
@@ -7,6 +8,7 @@
 }
 
 @Html.HiddenFor(c => c.CODPRO)
+@Html.HiddenFor(c => c.CODPUB)
 
 <div class="callout callout-info">
     <h4><i class="icon fa fa-info"></i>&nbsp;Información</h4>
@@ -63,35 +65,46 @@
     <script type="text/javascript" language="javascript">
 
 
-        var _dataPropuestas_ = null;
-        var tabPropuestas = $("#tabPropuestas").dataTable({
-            "info": false,
-            "bServerSide": false,
-            "data": _dataPropuestas_,
-            "order": [[1, "asc"]],
-            "columns": [
-                {
-                    "bSortable": false,
-                    "sClass": "center",
-                    "sWidth": "5%",
-                    "render": function (data, type, row) {
-                        return '<center><button class="btn btn-primary" title="Informacion Propuesta" type="button" onclick="verInformacionPropuesta(' + row[0] + ');"><i class="fa fa-file-pdf-o"></i></button></center>';
+    var _dataPropuestas_ = null;
+    var tabPropuestas = $("#tabPropuestas").dataTable({
+        "info": false,
+        "bServerSide": false,
+        "data": _dataPropuestas_,
+        "order": [[1, "asc"]],
+        "columns": [
+            {
+                "bSortable": false,
+                "sClass": "center",
+                "sWidth": "5%",
+                "render": function (data, type, row) {
+                    return '<center><button class="btn btn-primary" title="Informacion Propuesta" type="button" onclick="verInformacionPropuesta(' + row[0] + ');"><i class="fa fa-file-pdf-o"></i></button></center>';
+                }
+            },
+            {
+                "sTitle": "Sociedad",
+                "render": function (data, type, row) {
+                    return "<div style='font-size:13px;'><i>RUC - Razon Social:</i> <br/>" + data + "</div>";
+                }
+            },
+            { "sTitle": "Representante", "sWidth": "15%" },
+            { "sTitle": "Cel. Representate", "visible": false },
+            { "sTitle": "Correo Representate", "visible": false },
+            { "sTitle": "Entidad" },
+            { "sTitle": "Retribucion" },
+            { "sTitle": "IGV" },
+            {
+                "sTitle": "Estado",
+                "sClass": "center",
+                "render": function (data, type, row) {
+                    if (row[10] == '@Convert.ToInt32(Estado.Propuesta.Ganadora)')
+                        return "<span style='font-weight:bold; color:green; font-size:15px;'>" + data + " <h4><i class='fa fa-thumbs-up'></i></h4> </span>";
+                    else if (row[10] == '@Convert.ToInt32(Estado.Propuesta.Descalifica)')
+                        return "<span style='font-weight:bold; color:red; font-size:15px;'>" + data + " <h4><i class='fa fa-thumbs-down'></i></h4> </span>";
+                    else
+                        return "<span >" + data + "</span>";
                     }
                 },
-                {
-                    "sTitle": "Sociedad",
-                    "render": function (data, type, row) {
-                        return "<div style='font-size:13px;'><i>RUC - Razon Social:</i> <br/>" + data + "</div>";
-                    }
-                },
-                { "sTitle": "Representante", "sWidth": "15%" },
-                { "sTitle": "Cel. Representate", "visible": false },
-                { "sTitle": "Correo Representate", "visible": false },
-                { "sTitle": "Entidad" },
-                { "sTitle": "Retribucion" },
-                { "sTitle": "IGV" },
-                { "sTitle": "Estado" },
-                
+
                 {
                     "sTitle": "Puntaje",
                     "sClass": "center",
@@ -102,7 +115,7 @@
                 {
                     "sTitle": "Ganador",
                     "render": function (data, type, row) {
-                        return "<center><input type='radio' value='" + row[0] + "' name='rdGanadorPropuesta' onclick='javascript:seleccionarPropuesta(this.value);' /></center>";
+                        return "<center><input type='radio' value='" + row[0] + "' name='rdGanadorPropuesta' onclick='javascript:seleccionarPropuesta(this.value, " + row[11] + ");' /></center>";
                     }
                 },
             ],
@@ -119,7 +132,7 @@
                 $("#" + idPropuestaGanadora).append("<h4><i class='fa fa-star-o'></i></h4>");
 
             }
-           
+
         });
 
 
@@ -129,36 +142,37 @@
             $("#btnDefinirGanador").click(asignarPropuestaGanadora);
         });
 
-        function seleccionarPropuesta(idProp) {
+        function seleccionarPropuesta(idProp, idPub) {
             $("#CODPRO").val(idProp);
+
         }
 
         function listarPropuestas() {
             $.ajax({
                 url: '@Url.Action("ListadoPropuestasCalificar", "Propuesta")',
-                type: 'POST',
-                async: false,
-                data: { idPub: $("#CODPUB").val() },
-                success: function (result) {
-                    _dataPropuestas_ = result;
-                    tabPropuestas.fnReloadData(_dataPropuestas_);
-                }
-            });
-        }
+            type: 'POST',
+            async: false,
+            data: { idPub: $("#CODPUB").val() },
+            success: function (result) {
+                _dataPropuestas_ = result;
+                tabPropuestas.fnReloadData(_dataPropuestas_);
+            }
+        });
+    }
 
-        function asignarPropuestaGanadora() {
-            $.ajax({
-                url: '@Url.Action("AsignarPropuestaComoGanadora", "Propuesta")',
-                type: 'POST',
-                async: false,
-                data: { idPropuesta: $("#CODPRO").val() },
-                success: function (result) {
-                    mostrarNotificacion(result);
-                    listarPropuestas();
-                }
-            });
-        }
+    function asignarPropuestaGanadora() {
+        $.ajax({
+            url: '@Url.Action("AsignarPropuestaComoGanadora", "Propuesta")',
+            type: 'POST',
+            async: false,
+            data: { idPropuesta: $("#CODPRO").val(), idPublicacion : $("").val() },
+            success: function (result) {
+                mostrarNotificacion(result);
+                listarPropuestas();
+            }
+        });
+    }
 
-    </script>
+</script>
 
 }
