--- a/SAF.Web.Intranet/Areas/Publicacion/Views/Evaluador/_ResultadoCorte.cshtml
+++ b/SAF.Web.Intranet/Areas/Publicacion/Views/Evaluador/_ResultadoCorte.cshtml
@@ -9,7 +9,30 @@
             <h4 class="modal-title">Resultado Corte Publicación</h4>
         </div>
         <div class="modal-body">
-            <table id="tabCortePublicacion" class="table table-striped table-bordered" cellpadding="0" cellspacing="0" border="0"></table>
+
+
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="box box-primary color-palette-box">
+                        <div class="box-header with-border">
+                            <h3 class="box-title"><i class="fa fa-users"></i>&nbsp;Auditores y Cargos</h3>
+                        </div>
+                        <div class="box-body">
+
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <table id="tabCortePublicacion" class="table table-striped table-bordered" cellpadding="0" cellspacing="0" border="0"></table>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            
         </div>
         <div class="modal-footer">
             <input type="button" class="btn btn-default" id="btnCancelar" value="Cerrar" data-dismiss="modal" />
