--- a/SAF.Web.Intranet/Views/Shared/_PageHeader.cshtml
+++ b/SAF.Web.Intranet/Views/Shared/_PageHeader.cshtml
@@ -15,7 +15,7 @@
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
                 <!-- Messages: style can be found in dropdown.less-->
-                <li class="dropdown messages-menu">
+                @*<li class="dropdown messages-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-envelope-o"></i>
                         <span class="label label-success">4</span>
@@ -90,9 +90,9 @@
                         </li>
                         <li class="footer"><a href="#">See All Messages</a></li>
                     </ul>
-                </li>
+                </li>*@
                 <!-- Notifications: style can be found in dropdown.less -->
-                <li class="dropdown notifications-menu">
+                @*<li class="dropdown notifications-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-bell-o"></i>
                         <span class="label label-warning">10</span>
@@ -100,7 +100,7 @@
                     <ul class="dropdown-menu">
                         <li class="header">You have 10 notifications</li>
                         <li>
-                            <!-- inner menu: contains the actual data -->
+                           
                             <ul class="menu">
                                 <li>
                                     <a href="#">
@@ -131,9 +131,9 @@
                         </li>
                         <li class="footer"><a href="#">View all</a></li>
                     </ul>
-                </li>
+                </li>*@
                 <!-- Tasks: style can be found in dropdown.less -->
-                <li class="dropdown tasks-menu">
+                @*<li class="dropdown tasks-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-flag-o"></i>
                         <span class="label label-danger">9</span>
@@ -141,10 +141,10 @@
                     <ul class="dropdown-menu">
                         <li class="header">You have 9 tasks</li>
                         <li>
-                            <!-- inner menu: contains the actual data -->
+                            
                             <ul class="menu">
                                 <li>
-                                    <!-- Task item -->
+                                    
                                     <a href="#">
                                         <h3>
                                             Design some buttons
@@ -156,9 +156,9 @@
                                             </div>
                                         </div>
                                     </a>
-                                </li><!-- end task item -->
+                                </li>
                                 <li>
-                                    <!-- Task item -->
+                                    
                                     <a href="#">
                                         <h3>
                                             Create a nice theme
@@ -170,9 +170,9 @@
                                             </div>
                                         </div>
                                     </a>
-                                </li><!-- end task item -->
+                                </li>
                                 <li>
-                                    <!-- Task item -->
+                                    
                                     <a href="#">
                                         <h3>
                                             Some task I need to do
@@ -184,9 +184,9 @@
                                             </div>
                                         </div>
                                     </a>
-                                </li><!-- end task item -->
+                                </li>
                                 <li>
-                                    <!-- Task item -->
+                           
                                     <a href="#">
                                         <h3>
                                             Make beautiful transitions
@@ -198,14 +198,14 @@
                                             </div>
                                         </div>
                                     </a>
-                                </li><!-- end task item -->
+                                </li>
                             </ul>
                         </li>
                         <li class="footer">
                             <a href="#">View all tasks</a>
                         </li>
                     </ul>
-                </li>
+                </li>*@
                 <!-- User Account: style can be found in dropdown.less -->
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
