--- a/SAF.Web/Views/InvitacionAuditor/_BusquedaAuditores.cshtml
+++ b/SAF.Web/Views/InvitacionAuditor/_BusquedaAuditores.cshtml
@@ -27,24 +27,61 @@
             <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="tabsMejorEquipo">
 
+                    <!--INICIO-->
 
-                    <table id="tabMejorEquipo" class="table table-striped table-bordered" cellpadding="0" cellspacing="0" border="0"></table>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="box box-primary color-palette-box">
+                                <div class="box-header with-border">
+                                    <h3 class="box-title"><i class="fa fa-users"></i>&nbsp;Auditores con mejor puntaje</h3>
+                                </div>
+                                <div class="box-body">
 
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <table id="tabMejorEquipo" class="table table-striped table-bordered" cellpadding="0" cellspacing="0" border="0"></table>
+                                            </div>
+                                        </div>
+                                    </div>
 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-
+                    <!--FIN-->
+   
                 </div>
                 <div role="tabpanel" class="tab-pane" id="tabsAuditoresAptos">
-                    <table id="tabAuditoresAptos" class="table table-striped table-bordered" cellpadding="0" cellspacing="0" border="0"></table>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="box box-primary color-palette-box">
+                                <div class="box-header with-border">
+                                    <h3 class="box-title"><i class="fa fa-users"></i>&nbsp;Auditores que califican para la auditoria</h3>
+                                </div>
+                                <div class="box-body">
+
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <table id="tabAuditoresAptos" class="table table-striped table-bordered" cellpadding="0" cellspacing="0" border="0"></table>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-
-
-
         </div>
         <div class="modal-footer">
-            <input type="button" class="btn btn-primary" id="btnInvitarAuditores" value="Invitar" />
+            @*<input type="button" class="btn btn-primary" id="btnInvitarAuditores" value="Invitar" />*@
+            <button id="btnInvitarAuditores" type="button" class="btn btn-success"><i class="fa fa-check"></i>&nbsp;Invitar Seleccionados</button>
             <input type="button" class="btn btn-default" id="btnCancelar" value="Cerrar" data-dismiss="modal" />
         </div>
     </div>
@@ -76,6 +113,15 @@
             else
                 codigosAuditorServicio = codigosAuditorServicio + "," + $(this).val();
         });
+
+        if (codigosAuditorServicio == "") {
+            new PNotify({
+                title: 'Respuesta Sistema!',
+                type: "error",
+                text: "Debe seleccionar al menos un auditor"
+            });
+            return
+        }
 
         $.ajax({
             url: '@Url.Action("InvitarAuditores", "InvitacionAuditor")',
