--- a/SAF.Web/Views/Seg/Acceso.cshtml
+++ b/SAF.Web/Views/Seg/Acceso.cshtml
@@ -43,7 +43,7 @@
                     <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
                 </div>
                 <div class="form-group has-feedback">
-                    @Html.PasswordFor(c => c.Password, new { @class = "form-control", @placeholder = "Usuario" })
+                    @Html.PasswordFor(c => c.Password, new { @class = "form-control", @placeholder = "Password" })
                     <!--<input type="password" class="form-control" placeholder="Contraseña">-->
                     <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                 </div>
