--- a/SAF.Web/Views/Shared/_PageHeader.cshtml
+++ b/SAF.Web/Views/Shared/_PageHeader.cshtml
@@ -18,9 +18,9 @@
                 <li class="dropdown messages-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-envelope-o"></i>
-                        <span class="label label-success" id="contadorNotificacion">4</span>
+                        <span class="label label-success" id="contadorNotificacion">0</span>
                     </a>
-                    <ul class="dropdown-menu">
+                    @*<ul class="dropdown-menu">
                         <li class="header">You have 4 messages</li>
                         <li>
                             <!-- inner menu: contains the actual data -->
@@ -89,10 +89,10 @@
                             </ul>
                         </li>
                         <li class="footer"><a href="#">See All Messages</a></li>
-                    </ul>
+                    </ul>*@
                 </li>
                 <!-- Notifications: style can be found in dropdown.less -->
-                <li class="dropdown notifications-menu">
+                @*<li class="dropdown notifications-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-bell-o"></i>
                         <span class="label label-warning">10</span>
@@ -131,8 +131,11 @@
                         </li>
                         <li class="footer"><a href="#">View all</a></li>
                     </ul>
-                </li>
+                </li>*@
                 <!-- Tasks: style can be found in dropdown.less -->
+
+                
+                @*
                 <li class="dropdown tasks-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-flag-o"></i>
@@ -206,6 +209,10 @@
                         </li>
                     </ul>
                 </li>
+                *@
+
+
+
                 <!-- User Account: style can be found in dropdown.less -->
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
